--- a/LaTeX/Project/master.tex
+++ b/LaTeX/Project/master.tex
@@ -8,7 +8,7 @@
 %%
 \unless\ifdefined\Preamble
     \newcommand{\MainDoc}{}  % define the MainDoc command here
-\def\twocol{} % 2コラムにする
+%\def\twocol{} % 2コラムにする
 \def\usesagetex{} % SageTeXを使う
 %\def\landscape{} % Landscape
 \input{preamble.tex}
