--- a/LaTeX/Project/master.tex
+++ b/LaTeX/Project/master.tex
@@ -8,8 +8,8 @@
 %%
 \unless\ifdefined\Preamble
     \newcommand{\MainDoc}{}  % define the MainDoc command here
-%\def\twocol{} % 2コラムにする
-\def\usesagetex{} % SageTeXを使う
+\def\twocol{} % 2コラムにする
+%\def\usesagetex{} % SageTeXを使う
 %\def\landscape{} % Landscape
 \input{preamble.tex}
 \definecolor{myred}{rgb}{0.85,0,0.1}
