--- a/LaTeX/Project/master.tex
+++ b/LaTeX/Project/master.tex
@@ -1,8 +1,10 @@
 %%% -*- Mode: Latex; coding: utf-8; indent-tabs-mode: nil -*-
 % !TeX root = master.tex
+% !TeX-master = master.tex
+% !TeX-engine = lualatex
 %%
 %% Copyright(C) Yutaka Motose All rights reserved.
-%% Lastupdate: 2024-10-04 13:0812:04 JST
+%% Lastupdate: 2024-10-18 14:27:28 JST
 %%
 %% Author: Yutaka Motose <motose@etech21.net>
 %%
@@ -12,6 +14,7 @@
 \def\usesagetex{} % SageTeXを使う
 %\def\landscape{} % Landscape
 \input{preamble.tex}
+
 \definecolor{myred}{rgb}{0.85,0,0.1}
 \definecolor{mypink}{rgb}{1,0.92,0.92}
 \setlength{\fboxsep}{2pt}
@@ -56,13 +59,13 @@ $K = \frac{[\ce{Hg^2+}][\ce{Hg}]}{[\ce{Hg2^2+}]}$
 
 \end{document}
 %% ---------------------------------------------------------------------
+%%% Local Variables:
 %%% coding: utf-8
 %%% version-control: t
 %%% kept-new-versions: 3
 %%% kept-old-versions: 0
-%%% Local Variables:
 %%% mode: japanese-latex
-%%% TeX-engine: luatex
+%%% TeX-engine: lualatex
 %%% TeX-master: t
 %%% End:
 %%% master.tex ends here
